# reality

./: .gitignore  Cargo.toml  mupen-build.sh  mupen-run.sh
dylib/reality-mupen/: Cargo.toml
dylib/reality-mupen/src/: exports.rs  lib.rs  server.rs  trainer.rs
ext/: .gitignore  update-m64p-core.sh
ext/mupen64plus-core/: reality.c  reality.h
ext/mupen64plus-core/projects/VisualStudio2013/: mupen64plus-core.vcxproj  mupen64plus-core.vcxproj.filters
ext/mupen64plus-core/src/api/: frontend.c
ext/mupen64plus-core/src/device/r4300/: cached_interp.c  cp0.c  interrupt.c  mips_instructions.def  pure_interp.c
ext/mupen64plus-core/src/device/rcp/pi/: pi_controller.c
ext/mupen64plus-core/src/main/: main.c
lib/reality-mips/: Cargo.toml  build.rs
lib/reality-mips-assembler/: Cargo.toml  build.rs
lib/reality-mips-assembler/src/: lib.rs
lib/reality-mips-isa-specification/: Cargo.toml
lib/reality-mips-isa-specification/src/: lib.rs
lib/reality-mips/src/: lib.rs
lib/reality-mips/src/binary/: lookup.rs  mod.rs  relocation.rs  symbol.rs
lib/reality-mips/src/block/: block.rs  jump_table.rs  mod.rs  tracer.rs  tracer_algo.rs
lib/reality-mips/src/common/: macros.rs
lib/reality-mips/src/decompile/: type.rs
lib/reality-mips/src/flow/: condition.rs  location.rs  mod.rs  tracer.rs  value.rs  value_expr.rs  value_store.rs
lib/reality-mips/src/isa/: core.rs  disassemble.rs  instruction.rs  mod.rs  operand.rs  pc_impl.rs  regs.rs
lib/reality-mips/src/memory/: addr_vec.rs  addressing.rs  memory_map.rs  mod.rs
lib/reality-mupen-core/: Cargo.toml
lib/reality-mupen-core/src/: config.rs  emu.rs  lib.rs
lib/reality-mupen-core/src/modes/: dma.rs  insn_diff.rs  mod.rs  offset.rs  threads.rs
lib/reality-ultra/: Cargo.toml
lib/reality-ultra/src/: crc_calc.rs  endian.rs  lib.rs  rom.rs
lib/reality-util/: Cargo.toml
lib/reality-util/src/: debug.rs  iter.rs  lib.rs
lib/reality-util/src/graph/: dfs.rs  dot.rs  lca.rs  mod.rs  scc.rs  scc_node.rs
lib/reality-zelda/: Cargo.toml
lib/reality-zelda/src/: files.rs  lib.rs  overlay.rs  yaz0.rs  zelda_rom.rs
research/gex64/: pw-decode.md
