[package]
name = "reality-mupen"
version = "0.1.0"
authors = ["Kjartan Skjervøy <kskjer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reality-mips = { path = "../../lib/reality-mips", features = ["serialize"] }
reality-mupen-core = { path = "../../lib/reality-mupen-core", features = ["serialize"] }
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
futures-util = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib"]