[package]
name = "reality-mips-assembler"
version = "0.1.0"
authors = ["Kjartan <kskjer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
reality-mips-isa-specification = { path = "../reality-mips-isa-specification" }