[package]
name = "reality-mips"
version = "0.1.0"
authors = ["Kjartan <kskjer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serialize = ["serde"]

[dependencies]
reality-util = { path = "../reality-util" }
reality-mips-assembler = { path = "../reality-mips-assembler" }
serde = { version = "1.0", features = ["derive"], optional = true }

[build-dependencies]
reality-mips-isa-specification = { path = "../reality-mips-isa-specification" }