[package]
name = "reality-mupen-core"
version = "0.1.0"
authors = ["Kjartan Skjervøy <kskjer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serialize = ["serde"]

[dependencies]
reality-mips = { path = "../reality-mips" }
serde = { version = "1.0", features = ["derive"], optional = true }
