[package]
name = "reality-ultra"
version = "0.1.0"
authors = ["Kjartan <kskjer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reality-util = { path = "../reality-util" }
reality-mips = { path = "../reality-mips" }
