[package]
name = "reality-zelda"
version = "0.1.0"
authors = ["Kjartan <kskjer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reality-mips = { path = "../reality-mips" }
reality-util = { path = "../reality-util" }
reality-ultra = { path = "../reality-ultra" }
subslice = "0.2.2"
